--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: radial-gradient(circle, rgba(0,251,198,1) 0%, rgba(167,37,37,1) 100%, rgba(98,255,5,1) 100%);
-  font-family: "Sansita Swashed", cursive;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto; /* add grid rows */
+  place-content: center;
+  gap: 20px;
+  font-family: system-ui, sans-serif;
+  font-size: 20px;
+  background: radial-gradient(
+    circle,
+    rgba(218, 226, 21, 1) 0%,
+    rgba(51, 209, 125, 1) 100%,
+    rgba(98, 255, 5, 1) 100%
+  );
 }
 
 .center {
@@ -19,6 +24,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 }
 
 .center h1 {
@@ -31,7 +37,6 @@ body {
   font-weight: bold;
   padding-left: 10px;
 }
-
 
 .center .inputbox {
   position: relative;
@@ -50,7 +55,7 @@ body {
   background: none;
   padding: 10px;
   border-radius: 10px;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 .center .inputbox:last-child {
@@ -81,12 +86,58 @@ body {
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: rgba(0,251,198,1);
+  background-color: rgba(51, 209, 125, 1);
   border: none;
   border-radius: 15px;
   margin-top: 20px; /* added margin property to create space between input boxes and submit button */
 }
 
 .submitButton:hover {
-  background:rgba(167,37,37,1) 100%;
+  background: #1384c5;
+}
+
+.bubble {
+  --r: 25px; /* the radius */
+  --t: 30px; /* the size of the tail */
+
+  max-width: 300px;
+  padding: 2px;
+  -webkit-mask: radial-gradient(var(--t) at var(--_d) 0, #0000 98%, #000 102%)
+      var(--_d) 100% / calc(100% - var(--r)) var(--t) no-repeat,
+    conic-gradient(at var(--r) var(--r), #000 75%, #0000 0) calc(var(--r) / -2)
+      calc(var(--r) / -2) padding-box,
+    radial-gradient(50% 50%, #000 98%, #0000 101%) 0 0 / var(--r) var(--r) space
+      padding-box;
+  
+  color: #fff;
+}
+
+.left {
+  background: #1384c5 border-box;
+  --_d: 0%;
+  border-left: var(--t) solid #0000;
+  margin-right: var(--t);
+  place-self: start;
+  margin: 10px;
+  padding-left: 10px;
+}
+
+.right {
+  background: rgba(51, 209, 125, 1) border-box;
+  --_d: 100%;
+  border-right: var(--t) solid #0000;
+  margin-left: var(--t);
+  place-self: end;
+  margin: 10px;
+  padding-left: 10px;
+}
+
+body {
+  margin: 0;
+  min-height: 50vh;
+  display: grid;
+  place-content: center;
+  gap: 20px;
+  font-family: system-ui, sans-serif;
+  font-size: 20px;
 }
